--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>dev.utility</groupId>
-    <artifactId>utility</artifactId>
-    <version>1.0.0</version>
-    <name>utility</name>
+    <groupId>dev.system</groupId>
+    <artifactId>system</artifactId>
+    <version>0.2.0</version>
+    <name>system</name>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
